testing/valid_input/ok13.java
class Main {
    static void run() {
        int a = 0b001 + 011 + 0xABC + 0xDEF + 12e-3 + 11e+2 + 11e2; 
    }
}
