testing/invalid_semantic/compat/err35.java
class Main {
    static void run() {
        boolean b = false;
        boolean a = true;
        b = a + b;
        return;
    }
}
